Documentação e Front-end

--- a/cbpolicydWEB/front-end/app/view/home/home.html
+++ b/cbpolicydWEB/front-end/app/view/home/home.html
@@ -21,7 +21,7 @@
     </template>
 
     <template md-tab-content>
-        <policies-main></policies-main>
+       <policies-main> </policies-main>
     </template>
   </md-tab>
 
@@ -47,5 +47,4 @@
   </md-tab>
 </md-tab-group>
 
-
-<router-outlet></router-outlet>
+<span defaultOverlayTarget></span>
