--- a/cbpolicydWEB/front-end/app/view/home/home.html
+++ b/cbpolicydWEB/front-end/app/view/home/home.html
@@ -12,39 +12,5 @@
         <button md-menu-item > Sign Out </button>
     </md-menu>
 </md-toolbar>
-
-<md-tab-group>
-  
-  <md-tab>
-    <template md-tab-label>
-        <md-icon>home</md-icon>
-    </template>
-
-    <template md-tab-content>
-       <policies-main> </policies-main>
-    </template>
-  </md-tab>
-
-  <md-tab>
-    <template md-tab-label>
-        Access control
-    </template>
-    <!--content-->
-  </md-tab>
-
-  <md-tab>
-    <template md-tab-label>
-        Quotas
-    </template>
-    <!--content-->
-  </md-tab>
-
-  <md-tab>
-    <template md-tab-label>
-        Accounting        
-    </template>
-    <!--content-->
-  </md-tab>
-</md-tab-group>
-
 <span defaultOverlayTarget></span>
+<policies-dashboard></policies-dashboard>
