--- a/cbpolicydWEB/front-end/app/view/policies/policies.dashboard.component.html
+++ b/cbpolicydWEB/front-end/app/view/policies/policies.dashboard.component.html
@@ -3,9 +3,8 @@
     
     <md-tab>
       <template md-tab-label>
-          <md-icon>search</md-icon>
+          <md-icon>home</md-icon>
       </template>
-
 
       <policies-main></policies-main>
 
