--- a/cbpolicydWEB/front-end/app/view/access_control/access.control.component.html
+++ b/cbpolicydWEB/front-end/app/view/access_control/access.control.component.html
@@ -1,4 +1,6 @@
-<table class="table table-striped">
+<div class="container-fluid">
+<div class="table-responsive">
+<table class="table table-striped table-hover table-condensed">
 
     <thead>
         <tr>
@@ -12,23 +14,96 @@
         </tr>
     </thead>
 
-    <tr *ngFor="let acl of accessControls" >
-     <td >{{acl.id}}         </td>
-     <td >{{acl.policyID}}   </td>
-     <td >{{acl.name}}       </td>
-     <td >{{acl.verdict}}    </td>
-     <td >{{acl.data}}       </td>
-     <td >{{acl.comment}}    </td>
-     <td >{{acl.disabled}}   </td>
+   <tbody>
+    <tr>
+        <td > 
+            <md-input-container> 
+                <input type="number" readonly md-input> 
+            </md-input-container>
+        </td>
+        
+        <td >
+
+           <select  class="form-control" [(ngModel)]="newAccessControls.policyID" >
+               <option *ngFor="let policy of policies" [ngValue]="policy.id">
+                   {{policy.name}}
+               </option>
+           </select>
+
+        </td>
+    
+        <td >
+            <md-input-container>
+                <input md-input [(ngModel)]="newAccessControls.name" [ngModelOptions]="{standalone: true}" >
+            </md-input-container>
+        </td>
+        
+        <td >
+
+            <select  class="form-control" [(ngModel)]="newAccessControls.verdict" >
+               <option *ngFor="let verdict of verdicts" [ngValue]="verdict">
+                   {{verdict}}
+               </option>
+           </select>
+
+        
+        </td>
+        
+        <td >
+            <md-input-container>
+                <input md-input [(ngModel)]="newAccessControls.data" [ngModelOptions]="{standalone: true}">
+            </md-input-container>
+        </td>
+
+        <td >
+            <md-input-container>
+                <input md-input [(ngModel)]="newAccessControls.comment" [ngModelOptions]="{standalone: true}">
+            </md-input-container>
+        </td>
+
+        <td >
+            <md-input-container>
+                <input type="number" min="0" max="1" size='1' maxlength="1" md-input [(ngModel)]="newAccessControls.disabled" value="{{newAccessControls.disabled}}" [ngModelOptions]="{standalone: true}">
+                <md-hint align="end"><span>0 ou 1</span></md-hint>
+            </md-input-container>
+        </td>
+
+        <td >
+            <button md-icon-button (click)="addAccessControls()" >
+                <md-icon class="md-18">save</md-icon>
+            </button>
+        </td>
+
+        <td >
+            <button md-icon-button (click)="clearAccessControl()">
+                <md-icon class="md-18">delete_forever</md-icon>
+            </button>
+        </td>
+
+    </tr>
+
+<br/>
+
+    <tr *ngFor="let accessControl of accessControls" >
+     <td >{{accessControl.id}}         </td>
+     <td >{{accessControl.policyID}}   </td>
+     <td >{{accessControl.name}}       </td>
+     <td >{{accessControl.verdict}}    </td>
+     <td >{{accessControl.data}}       </td>
+     <td >{{accessControl.comment}}    </td>
+     <td >{{accessControl.disabled}}   </td>
      <td >
         <button md-icon-button>
              <md-icon class="md-18">edit</md-icon>
         </button>
      </td>
      <td >
-        <button md-icon-button>
+        <button md-icon-button (click)="deleteAccessControl(accessControl)">
              <md-icon class="md-18">delete_forever</md-icon>
         </button>
      </td>
     </tr>
+   </tbody>
 </table>
+</div>
+</div>
