--- a/cbpolicydWEB/front-end/app/view/policies/policies.component.html
+++ b/cbpolicydWEB/front-end/app/view/policies/policies.component.html
@@ -1,4 +1,6 @@
-<table class="table table-striped">
+<div class="container-fluid">
+<div class="table-responsive">
+<table class="table table-striped table-hover table-condensed">
 
     <thead>
         <tr>
@@ -8,7 +10,8 @@
             <th> Description </th>
             <th> Disabled </th>
         </tr>
-
+    </thead>
+    <tbody>
         <tr>
             <td > 
                 <md-input-container> 
@@ -25,6 +28,7 @@
             <td >
                 <md-input-container>
                     <input type="number" min=0 max="100" md-input [(ngModel)]="newPolicy.priority" [ngModelOptions]="{standalone: true}" >
+                    <md-hint align="end"><span>0 - 100</span></md-hint>
                 </md-input-container>
             </td>
         
@@ -37,6 +41,7 @@
             <td >
                 <md-input-container>
                     <input type="number" min=0 max="1" md-input [(ngModel)]="newPolicy.disabled" [ngModelOptions]="{standalone: true}">
+                    <md-hint align="end"><span>0 ou 1</span></md-hint>
                 </md-input-container>
             </td>
             <td >
@@ -50,7 +55,7 @@
                 </button>
             </td>
         </tr>
-    </thead>
+
 <br/>
     <tr *ngFor="let policy of policies" >
         <td > 
@@ -94,4 +99,7 @@
             </button>
         </td>
     </tr>
+    </tbody>
 </table>
+</div>
+</div>
