--- a/cbpolicydWEB/front-end/app/view/home/home.html
+++ b/cbpolicydWEB/front-end/app/view/home/home.html
@@ -12,5 +12,5 @@
         <button md-menu-item > Sign Out </button>
     </md-menu>
 </md-toolbar>
-<span defaultOverlayTarget></span>
+<!--<span defaultOverlayTarget></span>-->
 <policies-dashboard></policies-dashboard>
